fixed spacing issue on CTO section

--- a/styles/style.css
+++ b/styles/style.css
@@ -426,6 +426,7 @@ h6 {
          }
 
          .section-description {
+            margin-top: 1rem;
             font-weight: 500;
          }
 
